# rommel

./: .dockerignore  .gitignore  .tool-versions  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/commands/: get_started.md
.github/workflows/: backend.yml  daemon.yml  frontend.yml  proto.yml  workspace-image.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/api/: auth.py  config.py  deps.py  health.py  main.py  policy.py  sessions.py  workspaces.py
backend/models/: __init__.py  tables.py
backend/policy/: rules.py
backend/repositories/: base.py
backend/repositories/postgres/: engine.py  users.py  workspaces.py
backend/services/: auth.py  fly_orchestrator.py  session_broker.py  workspace_lifecycle.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_sessions.py  test_workspaces.py
docs/: changelog.md  primitives.md  techstack.md  vision.md
docs/archive/: phase-3-workspace-image.md  phase-4-backend-plan.md  phase-5-frontend-plan.md  phase-7-pty-plan.md
docs/completions/: next-steps.md  phase-0-production-cutover.md  phase-0-scaffolding.md  phase-1-fs-watch.md  phase-1-proto.md  phase-2-git-primitives.md  phase-2-sandbox-daemon.md  (+7 more)
frontend/: .env.example  .gitignore  Makefile  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
proto/: README.md  codegen.sh
rommel/: README.md
sandbox-daemon/: .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
workspace-image/: .gitignore  Dockerfile  Makefile  README.md  fly.toml
(+117 files in other folders)
